--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "nuxt": "^3.15.2",
+    "swiper": "^11.2.6",
     "vue": "latest",
     "vue-router": "latest"
   },
