--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "nuxt": "^3.15.2",
+    "sass": "^1.77.6",
+    "sass-loader": "^16.0.5",
     "swiper": "^11.2.6",
     "vue": "latest",
     "vue-router": "latest"
-  },
-  "devDependencies": {
-    "sass-embedded": "^1.83.4"
   }
 }
